<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GCECT APP</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gate_rank">%s: %d</string>
    <string name="r_d_project_title">Title : %s</string>
    <string name="r_d_project_funding_agency">Funding Agency : %s</string>
    <string name="r_d_project_amount">Amount: %s</string>
    <string name="r_d_project_status">Status: %s</string>
    <string name="s_v_p1">Being one of the most sought after Higher Education Institutions in India, Government College Of Engineering and Ceramic Technology takes pride in introducing a journal named SCIENTIFIC VOYAGE that throws light on significant areas in Science, Engineering, Management and Technology. The journal enables publication of pre-eminent research work by Researchers, Acamedicians, and Scientists pertaining to varied disciplines.</string>
    <string name="s_v_p2">Government College of Engineering and Ceramic Technology was established in 1941 by Professor Sasadhar Ray who was an eminent and educationist and the first Principal of the college. At that time the college was named as Bengal Ceramic Institute Calcutta, which later on flowered into College of Ceramic Technology. Professor Ray was one of the pioneers in spreading ceramic education in India. He obtained his M.Sc. degree in Physics in 1930, as a student of Prof. Satyendranath Bose, from the University of Dacca having been place first in Class. He was a research scholar under Prof. K. S. Krishnan-F.R.S. in the Indian Association for the Cultivation of Science and served as a supervisor in Peripatetic Demonstration for Scheme of the Govt. of Bengal to popularize the ceramic manufacturing processes in the villages. He also worked for a brief period in the Industrial Research Laboratory, Dept. of Industries, Government of West Bengal.</string>
    <string name="s_v_p3">The college started with certificate and diploma courses in Ceramic Technology with six other different courses to train people for various ceramic industries in the eastern and other regions of India. Prof. Roy organized a commercial Training- cum- Production unit at the institute to provide employment through practical training to the students. He formulated many developmental schemes with their successful implementation and introduced the concept of self- employment in the institute to cope with the problem of growing unemployment in the country. He was the pioneer in India to manufacture bone chinawares using indigenous raw materials on commercial basis and glazed pottery, sanitary wares, tiles and low-tension insulators from Gangetic silt. His contribution to ceramic education and industry has gone for and near within India and round the globe.</string>
    <string name="s_v_p4">In the year 1962, B. Sc (Tech.) degree course in Ceramic Technology under the University of Calcutta was introduced in the institute, which was then renamed as College of Ceramic Technology and was undertaken by the Govt. of West Bengal. At that time more emphasis was given on Traditional Ceramics. Traditional consists of pottery including materials, cement, etc. and traditional glasses for windows and containers/bottles including crystal glasses and of course the infamous optical glasses for our eyes and cameras.</string>
    <string name="s_v_p5">Then came Dr. B. N. Samaddar as the Principal of the College, who was trained in MIT, USA. He brought a sophisticated touch of modern ceramics like Nuclear Ceramics, Space Ceramics, Electronic and Magnetic Ceramics, Bio-Ceramics, Piezoelectrics and Ferroelectrics by continuous enriching the courses with a strong emphasis on Materials Science.</string>
    <string name="s_v_p6">This college has seen the addition of two new B.Tech courses in Information Technology and Computer Science and Engineering which was initiated under the West Bengal University of Technology in the year 2000 and 2001 as well as the M.Tech course in Ceramic Technology which was introduced in the year 2006. The B.Tech and M.Tech courses of Ceramic Technology and the B.Tech course in Information Technology has already been accredited by the National Board of Accreditation (NBA). The institute has also recently gained approval from AICTE to begin the M. Tech. course in Information Technology.</string>
    <string name="the_institute_p1">
        An educational institute is a place where young minds are nurtured in the best possible way, where their skills are developed in a specific field. A good foothold is therefore essential, and the Govt. College of Engineering and Ceramic Technology is such an institute, where students are given the best platform to exhibit their talents. We take this opportunity, to introduce ourselves, as one of the leading government engineering colleges under the Department of Higher Education in the eastern part of India.\n\n
        From its humble beginning as the Bengal Ceramic Institute in 1942, renamed as the College of Ceramic Technology in 1962, and further renamed as the Govt. College of Engineering and Ceramic Technology in 2005, the college is entering the 80th glorious year of its academic life. It is indeed a time to celebrate, to introspect, to consolidate and to plan for its future. The uniqueness of this institute is that, it is the oldest institute for imparting technical education in Ceramic Science and Engineering, in the Eastern Part of India and the only institute offering a full fledged Undergraduate and Postgraduate course in Ceramic Technology in the state of West Bengal. This college has seen the addition of two new B.Tech courses in Information Technology and Computer Science and Engineering which was initiated under\n\n
        the West Bengal University of Technology in the year 2000 and 2001 as well as the M.Tech course in Ceramic Technology which was introduced in the year 2006. The B.Tech and M.Tech courses of Ceramic Technology and the B.Tech course in Information Technology has already been accredited by the National Board of Accreditation (NBA).\n\n
        The college has reached its magnificence under the admirable guidance and leadership of eminent academicians of international repute. The institute is presently headed by Prof.(Dr.) Saikat Maitra, under whose able guidance and leadership, the institute has been able to make commendable achievements.\n\n
        The academic program of this institute presently comprises of the mentioned B.Tech courses which has an intake of 48 students each and M.Tech course with an intake of 18 students. The institute has recently gained approval from AICTE to begin the M. Tech. course in Information Technology with a sanctioned intake of 18 students. The institute can boast of well equipped workshop and laboratories, which is essential for the scheduled academic curriculum and research activities operational at the institute. Besides other departmental laboratories, special mention is needed for sophisticated and specialized labs developed such as the Thin Film lab, Nano-Materials and Sol-gel Lab of the Ceramic Department and VLSI, Image Processing, GIS and the Computer Vision Lab of the Information Technology department. Another feather in the cap is the addition of a most modern Language Lab for English Communication Skill and Personality Development as well as the EDUSAT lab with Virtual Learning capability of our students. It is worth mentioning that the entire campus is connected to the internet for 24 hours through NKN Leased Line (100 mbps) connectivity which is accessible from all computers in the institute.\n\n
        The Institute has highly qualified faculty members where 35% of them are Doctorate Degree Holders. The rest are Post Graduate Degree holders out of which most of them are pursuing their Ph.D degrees. Over the last five years, the college has produced 5 Ph.Ds from both engineering and science departments. The faculty has contributed more than 100 research papers and presentations in Indian as well as International journals. Besides, several Research and Development projects sponsored by D.S.T, U.G.C, AICTE etc are running some of which have been successfully completed. All these accomplishments definitely prove that this institute is a ground for nurturing intellects.\n\n
        The institute has also received grant from the World Bank in the TEQIP One Phase for various developmental projects. This grant has been spent for:
    </string>
    <string name="the_institute_p2">Development of Infrastructure.</string>
    <string name="the_institute_p3">New Laboratory equipments.</string>
    <string name="the_institute_p4">Maintenance and repair of old laboratory equipments.</string>
    <string name="the_institute_p5">Funding for research and lectures attended by faculty in foreign universities.</string>
    <string name="the_institute_p6">Aim towards community development and over all growth.</string>
    <string name="the_institute_p7">The Institute has collaborated with reputed institutions at national and international level for postgraduate, project and Ph.D programmes.The Petronus University of Malaysia, Northern University in Saudi Arabia, Curtin University in Australia, Jadavpur University, Calcutta University, Presidency University, CGCRI, Saha Institute of Nuclear Physics are the ones to name a few. The institute has undertaken different technical training programmes for the self employment of the unemployed youth under Services to the Community and Economy Scheme of World Bank funded Project TEQIP. The institute also promotes active students participation in NSS programme. It is also worth mentioning that college is about to get academic autonomy from the University Grants Commission and has already gained part financial autonomy after completing its TEQIP-1 phase.\n\n
        The institute library can boast of more than 17,000 books as well as 15 or more National and International Journals covering various arenas of research and study.\n\n
        The Institute is proud of its students who are amongst the top rankers in the West Bengal Joint Entrance Examination. The successful students to have qualified the GATE examination this year has been about 45% in the Ceramic department, 40% in Computer Science and Engg and about 25% in Information Technology departments. The final year students of Ceramic Technology has already undergone 100% recruitment in various renowned companies like Saint Gobain Glass, Jindal South West Steel., Essar Steel, Steel Authority of India., Grindwell Norton, MECON, Tata Refractories and more. The students of final year, IT and CSE departments have also been successful in getting through software giants such as TCS., Cognizant ,Wipro, Infosys, Tech. Mahindra, Accenture, Tata Elxsi and many more. Many of the students of this institute are pursuing higher studies in reputed national institutions like the IITs and NITs and many have gone abroad to Universities like Sheffield, University of Florida, University of Washington, Arizona State University, Drexel University (Pennsylvania), University of Cincinnati to name a few.\n\n
        Over the years the college has grown and learnt to dream. It strives hard to become a “Centre of Excellence” in education which, in keeping with the rich heritage of India, will stress the simultaneous development of Body, Mind and Soul and endeavour to create compassionate, responsible and innovative global citizens who are commited to the development of India. These are the true objectives of the Institution. The development is still on.
    </string>
</resources>