<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="svFragment"
    type="com.gcect.gcectapp.ui.fragments.ScientificVoyageFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/yellow_gradient_background"
        android:orientation="vertical"
        tools:context=".ui.fragments.ScientificVoyageFragment">

        <FrameLayout
            android:id="@+id/flScientificVoyage"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:paddingTop="17dp"
            android:background="@drawable/ellipse">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/scientific_voyage_logo" />
        </FrameLayout>

        <ScrollView
            android:id="@+id/svScientificVoyage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/flScientificVoyage"
            android:layout_marginBottom="90dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/s_v_p1"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/s_v_p2"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/s_v_p3"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/s_v_p4"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/s_v_p5"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/s_v_p6"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoToWebsite"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#000068"
            android:fontFamily="@font/roboto_bold"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="30dp"
            android:paddingBottom="15dp"
            android:text="Go To Website"
            android:onClick="@{() -> svFragment.openScientificVoyageWebsite()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="30dp"
            app:strokeColor="@color/white"
            app:strokeWidth="0.5dp" />
    </RelativeLayout>
</layout>