<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/pageTopFl"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:alpha="0.7"
            android:background="@drawable/home_header_college_img"
            android:paddingTop="21dp">

            <TextView
                android:id="@+id/txtPageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />
        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/gcectAboutUsImageFl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="21dp"
            app:cardElevation="2dp"
            app:strokeColor="#000068"
            app:strokeWidth="2dp">

            <ProgressBar
                android:id="@+id/imgProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/gcectTheInstituteImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop" />

        </com.google.android.material.card.MaterialCardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gcectAboutUsImageFl">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/the_institute_p1"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">

                    <FrameLayout
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/blue_circle_background" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/the_institute_p2"
                        android:textAlignment="textStart"
                        android:textColor="#000062"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">

                    <FrameLayout
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/blue_circle_background" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/the_institute_p3"
                        android:textAlignment="textStart"
                        android:textColor="#000062"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">

                    <FrameLayout
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/blue_circle_background" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/the_institute_p4"
                        android:textAlignment="textStart"
                        android:textColor="#000062"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">

                    <FrameLayout
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/blue_circle_background" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/the_institute_p5"
                        android:textAlignment="textStart"
                        android:textColor="#000062"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">

                    <FrameLayout
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/blue_circle_background" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/the_institute_p6"
                        android:textAlignment="textStart"
                        android:textColor="#000062"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/the_institute_p7"
                    android:textAlignment="center"
                    android:textColor="#000062"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>